@@ -1256,9 +1256,12 @@ _pick_step_nodes (struct job_record  *job_ptr,
 							 usable_cpu_cnt);
 			if (node_tmp == NULL) {
 				int avail_node_cnt = bit_set_count(nodes_avail);
-				if (step_spec->min_nodes <=
-				    (avail_node_cnt + nodes_picked_cnt +
-				     mem_blocked_nodes)) {
+				avail_node_cnt += nodes_picked_cnt;
+				if (step_spec->min_nodes <= avail_node_cnt) {
+					*return_code =
+						ESLURM_TOO_MANY_REQUESTED_CPUS;
+				} else if (step_spec->min_nodes <=
+					   (avail_node_cnt+mem_blocked_nodes)) {
 					*return_code = ESLURM_NODES_BUSY;
 				} else if (!bit_super_set(job_ptr->node_bitmap,
 							  up_node_bitmap)) {
@@ -1274,8 +1277,10 @@ _pick_step_nodes (struct job_record  *job_ptr,
 			nodes_picked_cnt = step_spec->min_nodes;
 			nodes_needed = 0;
 		} else if (nodes_needed > 0) {
-			if (step_spec->min_nodes <=
-			    (nodes_picked_cnt + mem_blocked_nodes)) {
+			if (step_spec->min_nodes <= nodes_picked_cnt) {
+				*return_code = ESLURM_TOO_MANY_REQUESTED_CPUS;
+			} else if (step_spec->min_nodes <=
+				   (nodes_picked_cnt + mem_blocked_nodes)) {
 				*return_code = ESLURM_NODES_BUSY;
 			} else if (!bit_super_set(job_ptr->node_bitmap,
 						  up_node_bitmap)) {
